tests/NormalTests/paczka1/small_fuzzy/12275760.err
Error in line 4: lz7JI A767 13,7
Error in line 5: XxYbrLNSPi A767 74,7
